Fix logo cropping bug

--- a/scss/_side-menu.scss
+++ b/scss/_side-menu.scss
@@ -48,7 +48,6 @@
         background: url($asset-path + 'logos/horizontal-logo-dark.svg') center center no-repeat transparent;
         background-size: contain;
         height: 1.625rem;
-        width: 10rem;
       }
   }
 
